@@ -11,7 +11,7 @@
 %
 %  configuration file for Ciao Prolog 1.10#8
 %
-%  last updated: October 23, 2010
+%  last updated: October 26, 2010
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -235,6 +235,8 @@ call(F, A1, A2, A3, A4, A5, A6, A7, A8) :-
 '$lgt_file_extension'(logtalk, '.lgt').
 '$lgt_file_extension'(prolog, '.pl').
 '$lgt_file_extension'(xml, '.xml').
+'$lgt_file_extension'(tmp, '.itf').
+'$lgt_file_extension'(tmp, '.po').
 
 
 
