@@ -22,6 +22,10 @@ RELEASE NOTES
     Simplified and improved the performance of the predicate lookup caching
     code.
 
+    Updated the Logtalk compiler in order to also delete the intermediate
+    files generated by the back-end Prolog compilers when compiling the Prolog
+    files generated by Logtalk with the "clean" flag is set to "on".
+
     Updated the built-in objects, "logtalk" and "debugger", and the built-in
     protocols, "expanding" and "monitoring", to support static binding.
 
@@ -54,6 +58,10 @@ RELEASE NOTES
     compare/3, and callable/1 from all the config files of Prolog compilers
     where these predicates are built-in.
 
+    Added declaration of file name extensions for intermediate files generated
+    by the Prolog compilers themselves to the config files of B-Prolog, Ciao,
+    Qu-Prolog, and XSB.
+
     Added an ugly hack to the Qu-Prolog config file for accessing environment
     variables.
 
@@ -65,7 +73,8 @@ RELEASE NOTES
     missing the property "built_in".
 
     Updated the Qu-Prolog integration files in order to avoid a segmentation
-    fault when using a 32 bits compilation of Qu-Prolog.
+    fault when using a 32 bits compilation of Qu-Prolog. Thanks to Peter
+    Robinson for his help in solving this problem.
 
     Added a YAP integration file, "yaphooks.pl", defining the hook predicate
     user:prolog_predicate_name/2.
